--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "quity-ssr",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.1"
-  }
+	"name": "quity-ssr",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.7",
+		"next": "14.0.1",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-redux": "^8.1.3",
+		"sass": "^1.69.5"
+	}
 }
+
