--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.9.7",
+		"axios": "^1.6.0",
 		"next": "14.0.1",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-redux": "^8.1.3",
 		"sass": "^1.69.5"
+	},
+	"devDependencies": {
+		"@types/node": "20.8.10",
+		"typescript": "5.2.2"
 	}
 }
-
